Switching to eclipse/che master branch
Signed-off-by: Ilya Buziuk <ibuziuk@redhat.com>

--- a/config
+++ b/config
@@ -3,12 +3,8 @@
 HomeDir=/srv/che-build
 BuildUser=chebuilder
 
-# Until PR https://github.com/eclipse/che/pull/3798 is not 
-# merged we need to build from ibuziuk branch
-# export GIT_REPO=https://github.com/eclipse/che
-# export GIT_BRANCH=master
-export GIT_REPO=https://github.com/ibuziuk/che
-export GIT_BRANCH=CHE-26
+export GIT_REPO=https://github.com/eclipse/che
+export GIT_BRANCH=master
 
 export NPM_CONFIG_PREFIX=~/.che_node_modules
 export PATH=$NPM_CONFIG_PREFIX/bin:$PATH
