--- a/che.yaml
+++ b/che.yaml
@@ -1,190 +1,265 @@
-kind: Template
+---
 apiVersion: v1
-metadata:
-  annotations:
-    description: Application template for Eclipse Che
-    iconClass: icon-openjdk
-    tags: eclipse,che,java,angular,ide
-    version: 5.0.0
-  name: eclipse-che
-labels:
-  template: eclipse-che
-parameters:
-- description: The name for the application.
-  name: APPLICATION_NAME
-  value: che-host
-  required: true
-- description: 'Custom hostname for http service route.  Leave blank for default hostname, e.g.: <application-name>.<project>.<default-domain-suffix>'
-  name: HOSTNAME_HTTP
-  value: che.openshift.mini
-  required: false
-- description: Name of the che-server Docker image.
-  name: CHE_SERVER_DOCKER_IMAGE
-  value: rhche/che-server:nightly
-  required: true
-- description: Url of the OpenShift API
-  name: CHE_OPENSHIFT_ENDPOINT
-  value: ''
-  required: true
-- description: OpenShift token
-  name: CHE_OPENSHIFT_TOKEN
-  value: ''
-  required: false
-- description: OpenShift username
-  name: CHE_OPENSHIFT_USERNAME
-  value: openshift-dev
-  required: false
-- description: OpenShift userpassword.
-  name: CHE_OPENSHIFT_PASSWORD
-  value: devel
-  required: false
-- description: OpenShift project.
-  name: CHE_OPENSHIFT_PROJECT
-  value: eclipse-che
-  required: true
-- description: OpenShift service account name.
-  name: CHE_OPENSHIFT_SERVICEACCOUNTNAME
-  value: cheserviceaccount
-  required: true
-- description: Che log level (INFO or DEBUG)
-  name: CHE_LOG_LEVEL
-  value: INFO
-  required: false
-objects:
-- kind: PersistentVolumeClaim
-  apiVersion: v1
+kind: List
+items:
+- apiVersion: v1
+  kind: ServiceAccount
   metadata:
-    name: claim-che-conf
+    labels:
+      provider: fabric8
+      project: che
+      version: 1.0.54
+      group: io.fabric8.online.apps
+    name: che
+- apiVersion: v1
+  kind: Service
+  metadata:
+    annotations:
+      fabric8.io/app-menu: development
+      fabric8.io/git-commit: 36ca22dc526863e8a154fc04b405e93d13a1cc58
+      fabric8.io/scm-con-url: scm:git:git@github.com:fabric8io/fabric8-online.git/apps/che
+      fabric8.io/scm-url: http://github.com/fabric8io/fabric8-online/apps/che
+      fabric8.io/iconUrl: https://cdn.rawgit.com/fabric8io/fabric8-online/master/apps/che/src/main/fabric8/icon.png
+      fabric8.io/git-branch: release-v1.0.54
+      fabric8.io/scm-devcon-url: scm:git:git@github.com:fabric8io/fabric8-online.git/apps/che
+      fabric8.io/scm-tag: fabric8-online-2.0.1
+    labels:
+      project: che
+      provider: fabric8
+      version: 1.0.54
+      group: io.fabric8.online.apps
+    name: che-host
+  spec:
+    ports:
+    - name: http
+      port: 8080
+      protocol: TCP
+      targetPort: 8080
+    selector:
+      project: che
+      provider: fabric8
+      group: io.fabric8.online.apps
+- apiVersion: v1
+  kind: RoleBinding
+  metadata:
+    labels:
+      provider: fabric8
+      project: che
+      version: 1.0.54
+      group: io.fabric8.online.apps
+    name: che
+  roleRef:
+    name: admin
+  subjects:
+  - kind: ServiceAccount
+    name: che
+- apiVersion: v1
+  kind: PersistentVolumeClaim
+  metadata:
+    annotations:
+      volume.beta.kubernetes.io/storage-class: standard
+    labels:
+      provider: fabric8
+      project: che
+      version: 1.0.54
+      group: io.fabric8.online.apps
+    name: che-conf-volume
   spec:
     accessModes:
-      - ReadWriteOnce
+    - ReadWriteOnce
     resources:
       requests:
         storage: 1Gi
-- kind: PersistentVolumeClaim
-  apiVersion: v1
+- apiVersion: v1
+  kind: PersistentVolumeClaim
   metadata:
-    name: claim-che-data
+    annotations:
+      volume.beta.kubernetes.io/storage-class: standard
+    labels:
+      provider: fabric8
+      project: che
+      version: 1.0.54
+      group: io.fabric8.online.apps
+    name: che-data-volume
   spec:
     accessModes:
-      - ReadWriteOnce
+    - ReadWriteOnce
     resources:
       requests:
-        storage: 1Gi      
-- kind: Service
-  apiVersion: v1
-  spec:
-    ports:
-    - port: 8080
-      targetPort: 8080
-      protocol: TCP
-      name: tomcat
-    selector:
-      deploymentConfig: "${APPLICATION_NAME}"
+        storage: 1Gi
+- apiVersion: v1
+  kind: ConfigMap
   metadata:
-    name: "${APPLICATION_NAME}"
     labels:
-      application: "${APPLICATION_NAME}"
+      provider: fabric8
+      project: che
+      version: 1.0.54
+      group: io.fabric8.online.apps
+    name: che
+  data:
+    hostname-http: che.openshift.mini
+    workspace-storage: /home/user/che/workspaces
+    workspace-storage-create-folders: "false"
+    local-conf-dir: /etc/conf
+    openshift-serviceaccountname: che
+    che-server-evaluation-strategy: single-port
+    log-level: INFO
+    docker-connector: openshift
+    port: "8080"
+    remote-debugging-enabled: "false"
+- apiVersion: v1
+  kind: DeploymentConfig
+  metadata:
     annotations:
-      description: Che http port.
-- kind: Route
-  apiVersion: v1
-  id: "${APPLICATION_NAME}-http"
-  metadata:
-    name: "${APPLICATION_NAME}"
+      fabric8.io/git-commit: 36ca22dc526863e8a154fc04b405e93d13a1cc58
+      fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=che&var-version=1.0.54
+      fabric8.io/scm-con-url: scm:git:git@github.com:fabric8io/fabric8-online.git/apps/che
+      fabric8.io/scm-url: http://github.com/fabric8io/fabric8-online/apps/che
+      fabric8.io/iconUrl: https://cdn.rawgit.com/fabric8io/fabric8-online/master/apps/che/src/main/fabric8/icon.png
+      fabric8.io/git-branch: release-v1.0.54
+      fabric8.io/scm-devcon-url: scm:git:git@github.com:fabric8io/fabric8-online.git/apps/che
+      fabric8.io/scm-tag: fabric8-online-2.0.1
     labels:
-      application: "${APPLICATION_NAME}"
-    annotations:
-      description: Route for application's http service.
+      provider: fabric8
+      project: che
+      version: 1.0.54
+      group: io.fabric8.online.apps
+    name: che
   spec:
-    host: "${HOSTNAME_HTTP}"
-    to:
-      name: "${APPLICATION_NAME}"
-    port:
-      targetPort: tomcat
-- kind: DeploymentConfig
-  apiVersion: v1
-  metadata:
-    name: "${APPLICATION_NAME}"
-    labels:
-      application: "${APPLICATION_NAME}"
-  spec:
-    strategy:
-      type: Recreate
-    triggers:
-    - type: ConfigChange
     replicas: 1
     selector:
-      deploymentConfig: "${APPLICATION_NAME}"
+      project: che
+      provider: fabric8
+      group: io.fabric8.online.apps
     template:
       metadata:
-        name: "${APPLICATION_NAME}"
+        annotations:
+          fabric8.io/git-commit: 36ca22dc526863e8a154fc04b405e93d13a1cc58
+          fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=che&var-version=1.0.54
+          fabric8.io/scm-con-url: scm:git:git@github.com:fabric8io/fabric8-online.git/apps/che
+          fabric8.io/scm-url: http://github.com/fabric8io/fabric8-online/apps/che
+          fabric8.io/iconUrl: https://cdn.rawgit.com/fabric8io/fabric8-online/master/apps/che/src/main/fabric8/icon.png
+          fabric8.io/git-branch: release-v1.0.54
+          fabric8.io/scm-devcon-url: scm:git:git@github.com:fabric8io/fabric8-online.git/apps/che
+          fabric8.io/scm-tag: fabric8-online-2.0.1
         labels:
-          deploymentConfig: "${APPLICATION_NAME}"
-          application: "${APPLICATION_NAME}"
+          provider: fabric8
+          project: che
+          version: 1.0.54
+          group: io.fabric8.online.apps
       spec:
-        terminationGracePeriodSeconds: 75
         containers:
-        - name: "${APPLICATION_NAME}"
-          image: "${CHE_SERVER_DOCKER_IMAGE}"
-          imagePullPolicy: Always
-          privileged: true
-          livenessProbe:
-            tcpSocket:
-              port: 8080
-            initialDelaySeconds: 5
-            timeoutSeconds: 1
-          readinessProbe:
-            tcpSocket:
-              port: 8080
-            initialDelaySeconds: 5
-            timeoutSeconds: 1
-          volumeMounts:
-          - name: che-conf-volume
-            mountPath: "/conf"
-            readOnly: false
-          - name: che-data-volume
-            mountPath: "/data"
-          ports:
-          - name: http
-            containerPort: 8080
-            protocol: TCP
-          env:
+        - env:
           - name: CHE_DOCKER_IP_EXTERNAL
-            value: "${HOSTNAME_HTTP}"
+            valueFrom:
+              configMapKeyRef:
+                key: hostname-http
+                name: che
           - name: CHE_WORKSPACE_STORAGE
-            value: "/home/user/che/workspaces"
+            valueFrom:
+              configMapKeyRef:
+                key: workspace-storage
+                name: che
           - name: CHE_WORKSPACE_STORAGE_CREATE_FOLDERS
-            value: 'false'
+            valueFrom:
+              configMapKeyRef:
+                key: workspace-storage-create-folders
+                name: che
           - name: CHE_LOCAL_CONF_DIR
-            value: "/etc/conf"
-          - name: CHE_OPENSHIFT_ENDPOINT
-            value: "${CHE_OPENSHIFT_ENDPOINT}"
-          - name: CHE_OPENSHIFT_TOKEN
-            value: "${CHE_OPENSHIFT_TOKEN}"
-          - name: CHE_OPENSHIFT_USERNAME
-            value: "${CHE_OPENSHIFT_USERNAME}"
-          - name: CHE_OPENSHIFT_PASSWORD
-            value: "${CHE_OPENSHIFT_PASSWORD}"
+            valueFrom:
+              configMapKeyRef:
+                key: local-conf-dir
+                name: che
           - name: CHE_OPENSHIFT_PROJECT
-            value: "${CHE_OPENSHIFT_PROJECT}"
+            valueFrom:
+              fieldRef:
+                fieldPath: metadata.namespace
           - name: CHE_OPENSHIFT_SERVICEACCOUNTNAME
-            value: "${CHE_OPENSHIFT_SERVICEACCOUNTNAME}"
+            valueFrom:
+              configMapKeyRef:
+                key: openshift-serviceaccountname
+                name: che
           - name: CHE_DOCKER_SERVER__EVALUATION__STRATEGY
-            value: docker-local
+            valueFrom:
+              configMapKeyRef:
+                key: che-server-evaluation-strategy
+                name: che
           - name: CHE_LOG_LEVEL
-            value: "${CHE_LOG_LEVEL}"
+            valueFrom:
+              configMapKeyRef:
+                key: log-level
+                name: che
+          - name: CHE_PORT
+            valueFrom:
+              configMapKeyRef:
+                key: port
+                name: che
           - name: CHE_DOCKER_CONNECTOR
-            value: openshift
-          args: []
-          securityContext:
-            privileged: true
-            runAsUser: 0
+            valueFrom:
+              configMapKeyRef:
+                key: docker-connector
+                name: che
+          - name: CHE_DEBUG_SERVER
+            valueFrom:
+              configMapKeyRef:
+                key: remote-debugging-enabled
+                name: che
+          image: rhche/che-server:nightly
+          imagePullPolicy: Always
+          livenessProbe:
+            initialDelaySeconds: 120
+            tcpSocket:
+              port: 8080
+            timeoutSeconds: 10
+          name: che
+          ports:
+          - containerPort: 8080
+            name: http
+          - containerPort: 8000
+            name: http-debug
+          readinessProbe:
+            initialDelaySeconds: 20
+            tcpSocket:
+              port: 8080
+            timeoutSeconds: 10
+          volumeMounts:
+          - mountPath: /conf
+            name: che-conf-volume
+            readOnly: false
+          - mountPath: /data
+            name: che-data-volume
+        serviceAccountName: che
         volumes:
         - name: che-conf-volume
           persistentVolumeClaim:
-            claimName: claim-che-conf
+            claimName: che-conf-volume
         - name: che-data-volume
           persistentVolumeClaim:
-            claimName: claim-che-data
-        serviceAccountName: "${CHE_OPENSHIFT_SERVICEACCOUNTNAME}"
+            claimName: che-data-volume
+    triggers:
+    - type: ConfigChange
+- apiVersion: v1
+  kind: Route
+  metadata:
+    labels:
+      provider: fabric8
+      project: che
+      version: 1.0.54
+      group: io.fabric8.online.apps
+    name: che
+  spec:
+    host: <route-host>
+    to:
+      kind: Service
+      name: che-host
+# - apiVersion: v1
+#   kind: SecurityContextConstraints
+# cf. https://docs.openshift.org/latest/architecture/additional_concepts/authorization.html#security-context-constraints
+#   metadata:
+#     name: scc-anyuid
+#   runAsUser:
+#     type: RunAsAny
+#   seLinuxContext:
+#     type: RunAsAny
+#   users:
+#   - system:serviceaccount:eclipse-che:che
