Various fixes during tests
Signed-off-by: David Festal <dfestal@redhat.com>

--- a/config
+++ b/config
@@ -17,3 +17,10 @@ export PATH=$NPM_CONFIG_PREFIX/bin:$PATH
 
 export RH_DIST_SUFFIX=fabric8
 export RH_NO_DASHBOARD_SUFFIX=without-dashboard
+
+export RHCHEBOT_DOCKER_HUB_USER=rhchebot
+export RH_CHE_DOCKER_HUB_NAMESPACE=rhche
+
+export DOCKER_HUB_USER=${DOCKER_HUB_USER:-${RHCHEBOT_DOCKER_HUB_USER}}
+export DOCKER_HUB_PASSWORD=${DOCKER_HUB_PASSWORD:-${RHCHEBOT_DOCKER_HUB_PASSWORD}}
+export DOCKER_HUB_NAMESPACE=${DOCKER_HUB_NAMESPACE:-${RH_CHE_DOCKER_HUB_NAMESPACE}}
