--- a/che.yaml
+++ b/che.yaml
@@ -93,7 +93,7 @@ items:
       group: io.fabric8.online.apps
     name: che
   data:
-    hostname-http: che.openshift.mini
+    hostname-http: eclipse-che.minishift_ip.nip.io
     workspace-storage: /home/user/che/workspaces
     workspace-storage-create-folders: "false"
     local-conf-dir: /etc/conf
@@ -281,7 +281,6 @@ items:
       group: io.fabric8.online.apps
     name: che
   spec:
-    host: <route-host>
     to:
       kind: Service
       name: che-host
