--- a/config
+++ b/config
@@ -21,6 +21,9 @@ export RH_NO_DASHBOARD_SUFFIX=without-dashboard
 export RHCHEBOT_DOCKER_HUB_USER=rhchebot
 export RH_CHE_DOCKER_HUB_NAMESPACE=rhche
 
+DEFAULT_RH_CHE_DOCKER_IMAGE_VERSION=nightly-fabric8-no-dashboard
+export RH_CHE_DOCKER_IMAGE_VERSION=${RH_CHE_DOCKER_IMAGE_VERSION:-${DEFAULT_RH_CHE_DOCKER_IMAGE_VERSION}}
+
 export DOCKER_HUB_USER=${DOCKER_HUB_USER:-${RHCHEBOT_DOCKER_HUB_USER}}
 export DOCKER_HUB_PASSWORD=${DOCKER_HUB_PASSWORD:-${RHCHEBOT_DOCKER_HUB_PASSWORD}}
 export DOCKER_HUB_NAMESPACE=${DOCKER_HUB_NAMESPACE:-${RH_CHE_DOCKER_HUB_NAMESPACE}}
