--- a/config
+++ b/config
@@ -19,6 +19,7 @@ export RH_DIST_SUFFIX=fabric8
 export RH_NO_DASHBOARD_SUFFIX=without-dashboard
 
 export RHCHEBOT_DOCKER_HUB_USER=rhchebot
+export RHCHEBOT_DOCKER_HUB_PASSWORD=${RHCHEBOT_DOCKER_HUB_PASSWORD:-nopassword}
 export RH_CHE_DOCKER_HUB_NAMESPACE=rhche
 
 DEFAULT_RH_CHE_DOCKER_IMAGE_VERSION=nightly-fabric8-no-dashboard
